# csen-296-astra-notes

./: .gitignore  .pre-commit-config.yaml  DOD.md  FinalProjectDefenseAstraNotesRepositoryandProductDemo.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
artifacts/: SECURITY-AND-OPERATIONS.md
docs/: architecture.md  requirements.md  traceability.md
docs/artifacts/: ArchitectureDecisionLog.md  BacklogandSprintZeroPlanforAstraNotes.md  CompleteUMLDesignPackage.md  ConnectingDesignToPrototypeOrImplementation.md  DefinitionofDone.md  InitialRequirementSet.md  README.md  RefinedRequirementBaselineforAstraNotes.md  Requirements-to-UMLTraceabilityMatrix.md  WorkingAgreementAstraNotes.md  submission-ArchitectureDecisionLog.md  submission-BacklogAndSprintZero.md  submission-CollaborativeGitWorkflow.md  submission-ConnectingDesignToPrototype.md  submission-DefinitionOfDone.md  submission-FBISentinelViewpoint.md  submission-InitialRequirementSet.md  submission-RefinedRequirements.md  submission-ShiftLeftTesting.md  submission-TestImprovementLog.md  submission-TraceabilityMatrix.md  submission-UMLDesignPackage.md  submission-WaterfallChart.md  submission-WorkingAgreement.md
prompts/: 01-securenote-encryption.md  02-mvc-boundary-enforcement.md  03-search-and-version-history.md  README.md
src/astranotes/: __init__.py  __main__.py  app.py  config.py  errors.py
src/astranotes/models/: __init__.py  audit.py  note.py  version.py
src/astranotes/plugins/: __init__.py  manager.py
src/astranotes/repository/: __init__.py  base.py  remote.py  sqlite_repo.py
src/astranotes/services/: __init__.py  audit_log.py  encryption.py  note_service.py  sync.py  validation.py  version_history.py
src/astranotes/view/: __init__.py  cli.py  gui.py
tests/: conftest.py  test_cli_create_flow.py  test_delete_trash.py  test_mvc_boundary.py  test_note_factory.py  test_note_service_create.py  test_note_service_list.py  test_search.py  test_secure_note.py  test_validation_service.py  test_version_history.py
tests/perf/: test_search_perf.py
tools/: seed.py
