[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astranotes"
version = "0.1.0"
description = "AstraNotes — a local-first, encrypted note-taking application (CSEN 296B-2 final project)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["cryptography==42.0.5"]

[project.scripts]
astranotes = "astranotes.__main__:main"

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "ruff==0.4.4",
    "mypy==1.10.0",
    "pre-commit==3.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "TID"]
ignore = ["TID252"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"astranotes.repository".msg = "View layer must not import repository (NFR-2)."
"astranotes.services.encryption".msg = "View layer must not import encryption (NFR-2 / SEC-1)."

[tool.ruff.lint.per-file-ignores]
"src/astranotes/app.py" = ["TID251"]
"src/astranotes/services/*" = ["TID251"]
"src/astranotes/repository/*" = ["TID251"]
"tests/*" = ["TID251"]
"tools/*" = ["TID251"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "astranotes.view.gui"
disallow_untyped_calls = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-ra"
